<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"

    android:background="@drawable/logo_back">
<android.support.constraint.ConstraintLayout
    android:layout_margin="8dp"
    android:padding="10dp"
    android:layout_marginBottom="30dp"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    >
    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF5722"
        app:layout_constraintTop_toBottomOf="@+id/code"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/line0"/>
    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF5722"
        app:layout_constraintTop_toBottomOf="@+id/myOrders"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/address"
        android:id="@+id/line3"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAddress"
        android:gravity="center"
       android:textColor="@color/dark_mint"
        app:layout_constraintRight_toRightOf="parent"
   app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableRight="@drawable/ic_store"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:textColor="@color/white"

        android:layout_marginTop="10dp"
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line0"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:textColor="@color/white"

        android:layout_marginTop="10dp"
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintRight_toLeftOf="@+id/t1"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/line0"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:textColor="@color/white"

        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        app:layout_constraintRight_toLeftOf="@+id/t2"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:textColor="@color/white"

        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:fontFamily="@font/saudi"/>
    <TextView
        android:textColor="@color/white"

        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintRight_toLeftOf="@+id/t1"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:fontFamily="@font/saudi"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bk_button_logout"
        android:drawableLeft="@android:drawable/ic_menu_set_as"
        android:fontFamily="@font/saudi"
        android:padding="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line0"/>
    <Button
        android:textColor="@color/white"
        android:padding="3dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/saudi"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/myOrders"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        android:background="@drawable/bk_button_shape"

        android:text="@string/myOrders"/>


</android.support.constraint.ConstraintLayout>

    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FF5722"
        app:layout_constraintTop_toBottomOf="@+id/cl"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/line1"/>


    <ScrollView
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="10dp"
       >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/noItem"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noItem"
                android:fontFamily="@font/saudi"
                android:textSize="20dp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:id="@+id/progress"

                />
            <android.support.v7.widget.RecyclerView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                tools:listitem="@layout/row_produt_items"
                android:id="@+id/List_prod"></android.support.v7.widget.RecyclerView>

        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>