<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_margin="3dp"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bk_prod2"
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/dark_mint"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/saudi"/>
        <TextView
            android:textColor="@color/dark_mint"

            android:id="@+id/prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="منتج 1"
            app:layout_constraintRight_toLeftOf="@+id/t1"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/saudi"/>
        <TextView
            android:textColor="@color/dark_mint"

            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t1"
            android:fontFamily="@font/saudi"/>
        <TextView
            android:textColor="@color/dark_mint"

            android:id="@+id/wight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30 KG"
            app:layout_constraintRight_toLeftOf="@+id/t2"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/t1"
            android:fontFamily="@font/saudi"/>

        <TextView

            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20 $"
            android:layout_marginTop="20dp"
            android:textColor="#E90D0D"
            android:textSize="24dp"
      app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/t2"
            android:fontFamily="@font/saudi"/>


        <Button
            android:padding="1dp"

            android:layout_marginTop="5dp"
            android:fontFamily="@font/saudi"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/bay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bk_bay"
            android:text="@string/bay"
            android:textSize="20dp"
            android:textColor="@color/white"/>


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>